--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,18 @@
       rel="stylesheet"
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/Rezi/sugar-css@main/dist/sugar.min.css" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-11044411079"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'AW-11044411079');
+    </script>
   </head>
   <body class="s-light">
     <app-root></app-root>
